--- a/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_dispatch">DispatchActivity</string>
     <string name="title_activity_scan">MainActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_my_status">MyStatusActivity</string>
 </resources>
