--- a/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_activity_scan">MainActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_my_status">MyStatusActivity</string>
+    <string name="title_activity_package_details">PackageDetailsActivity</string>
 </resources>
