--- a/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_dispatch">DispatchActivity</string>
-    <string name="title_activity_scan">MainActivity</string>
+    <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_my_status">MyStatusActivity</string>
     <string name="title_activity_package_details">PackageDetailsActivity</string>
