--- a/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Package Tracking</string>
+    <string name="app_name">Package Tracker</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
@@ -8,4 +8,16 @@
     <string name="title_activity_login">LoginActivity</string>
     <string name="title_activity_my_status">MyStatusActivity</string>
     <string name="title_activity_package_details">PackageDetailsActivity</string>
+
+
+
+    <string name="login">Log in!</string>
+    <string name="prompt_username">Login</string>
+    <string name="prompt_password">Password</string>
+    <string name="error_intro">"Please "</string>
+    <string name="error_blank_username">provide user name</string>
+    <string name="error_blank_password">provide password</string>
+    <string name="error_join">" and "</string>
+    <string name="error_end">.</string>
+    <string name="progress_login">Logging on&#8230;</string>
 </resources>
