--- a/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
+++ b/PackageTrackingSystemAndroid/app/src/main/res/values/strings.xml
@@ -20,4 +20,14 @@
     <string name="error_join">" and "</string>
     <string name="error_end">.</string>
     <string name="progress_login">Logging on&#8230;</string>
+
+
+    <string name="scan">Scan</string>
+    <string name="status">Status</string>
+    <string name="logout">Log out</string>
+    <string name="progress_checking_the_code">Checking the code</string>
+    <string name="msg_no_scan_data">Code wasn\'t scanned properly!</string>
+    <string name="you_get_the_package">Package was assigned to You</string>
+    <string name="you_dropped_the_package">This package is already assigned to You</string>
+    <string name="invalid_package_code">Invalid package code - try again!</string>
 </resources>
